KIK-1932, fix client portal styling cut offs

--- a/app/assets/less/layout/_main.less
+++ b/app/assets/less/layout/_main.less
@@ -393,7 +393,7 @@ input[type=search]:-ms-input-placeholder {
 		}
 
 		.number {
-			padding: 0;
+			padding: 14px 0;
 		}
 	}
 
@@ -412,7 +412,7 @@ input[type=search]:-ms-input-placeholder {
 		}
 
 		.number {
-			padding: 0;
+			padding: 8px 0 0;
 		}
 
 		h2 {
@@ -471,8 +471,8 @@ input[type=search]:-ms-input-placeholder {
 
 	.number {
 		.align;
-		.font(46px);
-		padding: 0 34px 0 0;
+		.font(38px);
+		padding: 20px 34px 0 0;
 		position: relative;
 	}
 
@@ -4633,7 +4633,7 @@ div[data-percentage],
 	h3 {
 		margin: 0;
 		color: #333;
-		font-size: 30px;
+		font-size: 29px;
 		font-weight: 400;
 		text-transform: uppercase;
 	}
@@ -4730,7 +4730,7 @@ div[data-percentage],
   .opener {
     color: #fff;
     display: block;
-    .font(14px, 1);
+    .font(13px, 1);
     min-height: 59px;
     font-weight: 700;
     text-align: left;
