--- a/app/containers/StudyPage/styles.less
+++ b/app/containers/StudyPage/styles.less
@@ -209,7 +209,7 @@
   h3 {
     margin: 0;
     color: #333;
-    font-size: 30px;
+    font-size: 29px;
     font-weight: 400;
     text-transform: uppercase;
   }
